Completely fixed cumulative layout shift

--- a/styles/components/_canvas.module.scss
+++ b/styles/components/_canvas.module.scss
@@ -24,6 +24,8 @@
   }
 
   Canvas {
+    width: 100%;
+    height: 100%;
     pointer-events: none;
     user-select: none;
     -ms-user-select: none;
